#11312 closed bug (fixed)
[Locale] Including Be.h breaks build of anything
Reported by: | waddlesplash | Owned by: | pulkomandy |
---|---|---|---|
Priority: | high | Milestone: | R1/beta1 |
Component: | Kits/Locale Kit | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
In file included from /boot/system/develop/headers/os/LocaleKit.h:11, from /boot/system/develop/headers/os/Be.h:10, from /boot/home/Desktop/....cpp:2: /boot/system/develop/headers/os/locale/FloatFormatImpl.h:4: NumberFormatImpl.h: No such file or directory
Caused by recent locale kit changes, I believe. Assigning to Adrien.
Change History (3)
comment:1 by , 10 years ago
comment:3 by , 10 years ago
Milestone: | R1/alpha5 → R1/beta1 |
---|
Note:
See TracTickets
for help on using tickets.
I'm AFK for the weekend. I deleted NumberFormatImpl.h, so the #include from FloatFormatImpl must be deleted, and possibly you can also frmove FloatFormatImpl.h from LocaleKit.h.