Remove references to NumberFormatImpl.

The class and header file are gone, so don't try to use them.
Fixes #11312.